                                                     -*- coding: utf-8 -*-
Changes with APR-util 1.5.1

  *) Improve platform detection for bundled expat by updating
     config.guess and config.sub. [Rainer Jung]

Changes with APR-util 1.5.0

  *) dbd_pgsql_escape: Use PQescapeStringConn. [Nick Kew]

  *) apr_password_validate, apr_bcrypt_encode: Add support for bcrypt encoded
     passwords. The bcrypt implementation uses code from crypt_blowfish
     written by Solar Designer <solar openwall com>. apr_bcrypt_encode creates
     hashes with "$2y$" prefix, but apr_password_validate also accepts the old
     prefix "$2a$". [Stefan Fritsch]

  *) APR dbd: Allow to use apr_dbd_get_row() with a different pool than
     apr_dbd_select(). PR 53533. [<arthur echo gmail com>]

  *) APR dbd FreeTDS support: Fix spurious API errors caused by uninitialized
     fields.  [TROY.LIU 劉春偉 <TROY.LIU deltaww.com.cn>]

  *) apr_password_validate: Increase maximum hash string length to allow
     more than 9999 rounds with sha512-crypt. PR 53410. [Stefan Fritsch]

  *) Fix segfaults in crypt() and crypt_r() failure modes.
     PR 47272.  [Arkadiusz Miskiewicz <arekm pld-linux.org>]

  *) apr_crypto: Ensure that the if/else that governs the static
     initialisation of each crypto driver works when the first driver
     isn't in use. [Graham Leggett]

  *) apr_crypto: Ensure the *driver variable is initialised when a statically
     compiled library is initialised for the first time. [Graham Leggett]

  *) apr_crypto: Ensure the *driver variable is initialised when the library
     has already been loaded. Fix ported from apr_dbd. [Graham Leggett]

  *) apr_crypto: Move the static initialisation of DRIVER_LOAD from
     apr_crypto_init() to apr_crypto_get_driver(), so that we don't lose
     the parameters. [Graham Leggett]

Changes with APR-util 1.4.x and later:

  *) http://svn.apache.org/viewvc/apr/apr-util/branches/1.4.x/CHANGES?view=markup

Changes for APR-util 1.3.x and later:
