@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR-util 1.5.1
 
+  *) apr_password_validate(): Fix intermittent errors on systems
+     such as FreeBSD where the crypt() function is used.  [Jeff Trawick]
+
   *) Improve platform detection for bundled expat by updating
      config.guess and config.sub. [Rainer Jung]
 
